[tool.poetry]
name = "dqcsim-intel-qs"
version = "0.1.0"
description = ""
authors = ["Sergio Sánchez Ramírez <15837247+mofeing@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "3.8.2"
dqcsim = "^0.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
