[tool.poetry]
name = "dqcsim-iqs"
version = "0.2.0"
description = "Intel QS backend for DQCsim"
authors = ["Sergio Sánchez Ramírez <15837247+mofeing@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "3.8.2"
dqcsim = "^0.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
